# openai-to-anthropic-proxy

./: .gitignore  BUG_HUNT_RESULTS.md  Cargo.toml  README.md  REFERENCE.md  clippy.toml  proxy-toml-guide.md  proxy.json-guide.md  proxy.json.example  proxy.toml.example
scripts/: find_bad_tool.py  start-claude-code.ps1  start-claude-code.sh
src/: anthropic.rs  config.rs  error.rs  lib.rs  main.rs  openai.rs  proxy.rs  responses.rs  stream.rs  translate.rs
tests/: proxy_e2e.rs
